--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <title>Brath</title>
   </head>
   <body>
+
+    <div class="popup">
+      <button id="close">&times;</button>
+      <h2>Brath</h2>
+      <p>Danke für Ihren Besuch</p>
+      <h6>Barth 2023</h6>
+    </div> 
+
     <header>
       <div class="navigation-panel">
         <div class="subcontainer">
@@ -227,40 +235,45 @@
       </div>
 
       <!--award_section-->
-      <section class="award">
-        <h2>Auszeichnungen</h2>
-        <div class="awBot">
-          <div class="awLeft">
-            <div class="inner">
-              <img class="awIMG"src="./img/nagrada1.png" alt="n1" />
-              <p class="contentP">Tollit argumentum genau <br> Saepe lobortis</p>
-
+        <section class="award">
+         <div class="awText">
+          <h2>Auszeichnungen</h2>
+         </div>
+         <div class="awContent">
+          <div class="awTop">
+            <div class="awLeft">
+              <div class="inner">
+                <img src="./img/nagrada1.png" alt="nagrada1">
+                <p class="contentP">Schneewittchen <br> denique</p>
+              </div>
+            </div>
+            <div class="awRight">
+              <div class="inner">
+                <img id="smallPic" src="./img/nagrada2.png" alt="nagrada2">
+                <p class="contentP">Tollit argumentum genau <br> Saepe lobortis</p>
+              </div>
             </div>
           </div>
 
-          <div class="awRight">
-            <div class="inner">
-              <img class="awIMG" src="./img/nagrada2.png" alt="n2" />
-              <p class="contentP">Schneewittchen <br> denique</p>
+          <div class="awBot">
+            <div class="awLeft">
+              <div class="inner">
+                <img src="./img/nagrada3.png" alt="nagrada3">
+                <p class="contentP">Grimms Märchen <br> expetenda</p>
+              </div>
+            </div>
+            <div class="awRight">
+              <div class="inner">
+                <img src="./img/nagrada4.png" alt="nagrada4 ">
+                <p class="contentP">Mettwurst mei <br> ullum gloriatur.</p>
+              </div>
             </div>
           </div>
-        </div>
+         </div>
+          
 
-        <div class="awTop">
-          <div class="awLeft">
-            <div class="inner"></div>
-            <img class="awIMG"src="./img/nagrada3.png" alt="n3" />
-            <p class="contentP">Grimms Märchen <br> expetenda</p>
-          </div>
-
-          <div class="awRight">
-            <div class="inner">
-              <img class="awIMG" src="./img/nagrada4.png" alt="n4" />
-              <p class="contentP">Mettwurst mei <br> ullum gloriatur.</p>
-            </div>
-          </div>
-        </div>
-      </section>
+          
+        </section>
       <!--award_section-->
 
       <div class="break">
@@ -381,5 +394,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js" integrity="sha512-f5HTYZYTDZelxS7LEQYv8ppMHTZ6JJWglzeQmr0CVTS70vJgaJiIO15ALqI7bhsracojbXkezUIL+35UXwwGrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./js/rellax.js"></script>
     <script src="./js/lightMode.js"></script>
+    <script src="./js/modal.js"></script>
   </body> 
 </html>
