--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide"><img class="headerIMG" src="./img/headerIMG.jpg" alt="gg"></div>
-            <div class="swiper-slide"><img class="headerIMG" src="./img/emerson-vieira-pqDbQ21C59A-unsplash.jpg" alt="gg"></div>
-            <div class="swiper-slide"><img class="headerIMG" src="./img/emerson-vieira-Qi7NlvF-ZsY-unsplash.jpg" alt="gg"></div>
-            <div class="swiper-slide"><img class="headerIMG" src="./img/emerson-vieira-RO6Ke69Szhg-unsplash.jpg" alt="gg"></div>
-            <div class="swiper-slide"><img class="headerIMG" src="./img/emerson-vieira-Mq1LDuswX2o-unsplash.jpg" alt="gg"></div>
+            <div class="swiper-slide"><img class="headerIMG" src="./img/emerson-vieira-pqDbQ21C59A-unsplash.jpg" alt="pic1"></div>
+            <div class="swiper-slide"><img class="headerIMG" src="./img/emerson-vieira-Qi7NlvF-ZsY-unsplash.jpg" alt="pic2"></div>
+            <div class="swiper-slide"><img class="headerIMG" src="./img/emerson-vieira-RO6Ke69Szhg-unsplash.jpg" alt="pic3"></div>
+            <div class="swiper-slide"><img class="headerIMG" src="./img/emerson-vieira-Mq1LDuswX2o-unsplash.jpg" alt="pic4"></div>
           </div>
   
           <div class="swiper-pagination"></div>
@@ -287,6 +287,7 @@
             <h4>Empfehlungs</h4>
             <h2>Was die Leute über uns sagen</h2>
           </div>
+
           <div class="swiper swipeComments">
             <img id="leftClick" src="./img/leftcursor.svg" alt="left">
             <img id="rightClick" src="./img/rightCursor.svg" alt="right">
